app/assets/stylesheets/new_styles/_base.scss
html,
body {
  /* hack to ensure fixed elements at height: 100%; are in relation to the window */
  max-height : 100%;
  height:100%;
}

body {
  background-image : image_url("texture/light-bg.png");
  padding : none;

  height:100%;
  &.lock {
    overflow: hidden;
  }
}

#container {
  height: 100%;
}

/* new link color */
$link-blue : rgb(42,156,235);
a { color : $link-blue  }

.unread{ background-color:red;}
/* bootstrap extentions */
.icon-red   { background-image: image_url("img/glyphicons-halflings-red.png");   }
.icon-blue  { background-image: image_url("img/glyphicons-halflings-blue.png");  }

.avatar {
  &.micro {
    height: 20px;
    width: 20px;
  }

  &.small {
    height: 35px;
    width: 35px;
  }
}

.author-name {
  font-family : Roboto, Helvetica, Arial, sans-serif;
  color: inherit;
}

.canvas-frame {
  float : left;
}

.post-view {
  display: table;
  height: 100%;
  width: 100%;
}

#post-content {
  display : table;
  position : absolute;

  height: 100%;
  width: 100%;

  top : 0;
  left : 0;

  .logo {
    position : absolute;
    top : 10px;
    left : 10px;
  }

  #info_row {
    display : table-cell;
    text-align : center;
    padding : 20px 0;
  }

  .original-frame-wrapper {
    @include transition(all);
    @include opacity(.5);
    @include box-shadow(0,2px,8px,rgba(0, 0, 0, 0.9));

    position : relative;
    display : inline-block;

    &:hover {
      @include opacity(1);
    }
  }

  .frame,
  .original-frame,
  .current-frame {
    position : relative;
    display : inline-block;

    .canvas-frame {
      float : none;
    }

    .author-name {
      position : absolute;
      top : -10px;
      left : -10px;
      z-index : 20;
    }
  }

  .original-frame {
    .author-name {
      top : -7px;
      left : -7px;
    }
  }

  .current-frame {
    @include wide();
    vertical-align : middle;
  }

  i.divider {
    margin : 0 20px;
  }

  .original-frame {
    height : 200px;
    width : 200px;

    margin-left : -270px;

    .frame {
      max-width : 200px;
    }
  }

  .canvas-frame {
    max-height : 100%;

    .content {
      pointer : default !important;
    }

    .info {
      display : none;
    }
  }
}

.canvas-frame.frame-screenshot img {
  border : none !important;
}

article { //mood posts
  //default frame show styles
  $big-text-size : 2.5em;
  $medium-text-size : 1.5em;
  $small-text-size: 1em;
  width: 960px;
  margin: 0 auto;

  img {
    max-height: 70%;
    border : 10px solid #fff;
  }

  .photo_viewer {
    margin-bottom : 20px;
  }

  @include centered-frame();
  .container {
    padding: 70px 0;
    max-width: 85%;
  }

  header {
    padding : 0 100px;
  }

  header, header p{
  //big text
    @include media-text();
    font-size: $big-text-size;
    line-height: 1.5em;
  }

  section.body{
    p { font-size: $small-text-size; }

    &.short_body{
      p{
        font-size: $medium-text-size;
        margin-top: .5em;
      }
    }
  }

  &.night{
    background-color : $night-background-color;
    color : $night-text-color;

    #author-info {
      color : $night-text-color;
    }
  }

  &.newspaper {
    @include newspaper-type();

    text-align: left;

    .container {
      max-width: 600px;
    }

    .photo_viewer {
      float: right;
      margin-left: 20px;
      max-width: 320px;
    }

    header {
      margin-bottom: 1em;
      line-height: 1.2em;
    }

    .body p {
      @include newspaper-type();
      font-size: 1.2em;
      line-height: 1.7em;
      margin-bottom: 1.2em;
    }
  }

  &.wallpaper{
    color : #fff;
  }

  .img-bounding-box {
    margin : 10px;
    display : inline-block;
    text-align : left;
  }

  img {
    max-height: 400px;
    max-width: 400px;
  }
}

.status-with-photo-backdrop {
  p {
    color: #fff;

    a {
      @include transition(background-color, 0.3s);

      color: #000;
      background-color: #fff;
      background-color: rgba(255,255,255,0.7);
      padding: 0 5px;

      &:hover {
        text-decoration: none;
        background-color: #fff;
        background-color: rgba(255,255,255,1);
      }
    }
  }
}

.darken {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background-color: rgba(0,0,0,0.3);

  display: table;

  .darken-content {
    @include centered-frame();
    height: 100%;
    width: 100%;
  }
}

.photo-fill {
  @include background-cover();
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.frame {
  @include box-shadow(0,2px,8px,rgba(0, 0, 0, 0.9));
}

.photo-backdrop {
  p {
    color: #fff;
    z-index: 2;
  }

  img {
    position: relative;
  }

  .photo-fill {
    @include opacity(0.2)
  }
}

$bring-dark-accent-forward-color: #DDD;

#top_right_nav {
  float : right;
}

#top-right-nav {
  z-index: 10;
  position : absolute;
  right : 10px;
  top : 10px;

  & > a {
    @include transition(opacity);
    @include opacity(0.4);

    margin-left : 5px;

    &:hover {
      @include opacity(0.75);
      text-decoration : none;
    }
  }
}

.navbar {
  .logo {
    float : left;
    margin : 0 .6em;
  }
}

#header {
  @include box-shadow(0,2px,3px, rgba(0,0,0,0.2));
  @include linear-gradient(#222, #111);

  position : fixed;
  top : 0;
  width : 100%;
  padding : 0;
  z-index : 30;

  border-bottom : 1px solid #000;

  color : #fff;


  .logo {
    position : relative;
    top : 2px;
  }
}

#sign_up_prompt {
  @include box-shadow(0, -1px, 10px, rgba(0,0,0,0.3));
  z-index : 999;
  position : fixed;
  bottom : 0;
  left : 0;
  width : 100%;

  background-color : rgb(246, 50, 53);

  text-align : center;

  padding : 15px 10px 0;

  * {
    display : inline;
  }

  h1 {
    font : {
      family : Roboto-Light, Helvetica, Arial, sans-serif;
      size : 30px;
    }
    color : #fff;
  }
  .banner-logo {
    position: relative;
    top: -10px;
    margin-right: -18px;
  }

  .new-btn {
    padding : 8px 20px;
    position : relative;
    top : -5px;
    border : 1px solid rgba(0,0,0,0.6);
    color : #444;
    font-family : Roboto-Bold;

    &:hover {
      text-decoration : none;
    }
  }

  .tagline {
    position : relative;
    top : -4px;
    padding : 0 10px;
    padding-right : 17px;
    font-family : Roboto-Bold;
    color : rgba(0,0,0,0.6);
    font-size : 14px;
  }
}

.bookmarklet-button {
  cursor : move;
}

#composer-button.label.label-inverse {
  background-color : #ff0000;
}

#getting_started {
  position : fixed;
  display : table;

  z-index : 999;

  height : 100%;
  width : 100%;

  top : 0;
  left : 0;

  background-color : rgba(0,0,0,0.8);


  .gs-container {
    display : table-cell;
    position : relative;

    height : 100%;
    width : 100%;

    text-align : center;

    vertical-align: middle;
    vertical-position: middle;

    .img-wrapper {
      display : inline-block;
      position : relative;
    }

    .gs-done {
      position : absolute;
      bottom : 100px;
      left : 398px;
      padding : 5px 15px;
      color : #222;

      &:hover {
        text-decoration : none;
      }
    }
  }
}

.link-existing-account {
  font-size : 18px;
  margin-top : 15px;
  text-align : right;
  padding-right : 8px;
  color : #888;

  a {
    margin-left: 5px;
    color : #FFF;
  }
}

/* bootstrap label fixes for Roboto */
.label {
  padding : 2px 5px;
  padding-bottom : 3px;

  span {
    display : inline-block;
    position : relative;
    top : 1px;
    font-family : Roboto-Bold;
  }
}

.toggle-featured {
  float: right;
  margin-right: 10px;
}

#make-button {
  float: left;
  padding: 0 !important;
}

.share-button-container {
  margin: auto;
  width: 30%;

  .facebook-button {
    margin-left: 14px;
  }
}

#framer-complete {
  text-align: center;
  margin-top:20%;
}

#share-actions {
  text-align : left;
  margin-top : 10px;

  .fb-like {
    position : relative;
    top : -3px;
    margin-left : 5px;
  }
}


/* responsive */
@media (max-width: 767px) {
  body {
    padding : 0;
 }
}

